--- a/src/SmartyConfig/Common/province.conf
+++ b/src/SmartyConfig/Common/province.conf
@@ -1,5 +1,5 @@
 province_name = 北京市
-province_links = http://www.creditbj.gov.cn/creditbj/
+province_links = http://jxj.beijing.gov.cn/creditbj/
 
 province_name = 上海市
 province_links = http://www.shcredit.gov.cn/cxw/index.html
