--- a/src/SmartyConfig/Common/province.conf
+++ b/src/SmartyConfig/Common/province.conf
@@ -1,5 +1,5 @@
 province_name = 北京市
-province_links = http://jxj.beijing.gov.cn/creditbj/
+province_links = http://www.creditbj.gov.cn/creditbj/
 
 province_name = 上海市
 province_links = http://www.shcredit.gov.cn/cxw/index.html
@@ -56,10 +56,10 @@ province_name = 广东省
 province_links = http://www.gdcredit.gov.cn/IndexAction!getList.do
 
 province_name = 甘肃省
-province_links = http://www.gscredit.gov.cn/
+province_links = http://credit.gansu.gov.cn/
 
 province_name = 海南省
-province_links = http://xyhn.hainan.gov.cn/hnxyweb/p/index.html
+province_links = http://xyhn.hainan.gov.cn/CreditHnExtranetWeb/
 
 province_name = 重庆市
 province_links = http://www.xycq.gov.cn/
@@ -71,7 +71,7 @@ province_name = 贵州省
 province_links = http://www.gzcx.gov.cn/
 
 province_name = 云南省
-province_links = http://www.yncredit.gov.cn/
+province_links = http://yncredit.yn.gov.cn/
 
 province_name = 陕西省
 province_links = http://www.sxcredit.gov.cn/
@@ -80,13 +80,13 @@ province_name = 西藏自治区
 province_links = http://www.creditxizang.gov.cn/
 
 province_name = 内蒙古自治区
-province_links = http://nmgcredit.gov.cn/
+province_links = http://fgw.nmg.gov.cn/xynmg/html/index.html
 
 province_name = 广西壮族自治区
 province_links = http://www.gxcredit.gov.cn/
 
 province_name = 宁夏回族自治区
-province_links = http://www.nxcredit.gov.cn/
+province_links = http://credit.nx.gov.cn/
 
 province_name = 新疆生产建设兵团
 province_links = http://credit.xjbt.gov.cn/
